@@ -1,0 +1,3 @@
+2007-08-05  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* Ellipse.cs, Shape.cs: Added.
