@@ -1,3 +1,7 @@
+2007-08-05  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* System.Windows.Shapes: Added.
+
 2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* Theme.cs: Fixed redundant loading. Fixed for NUnit usage.
